# End_to_End_Conversational_RAG_with_livekit

./: .gitignore  README.md  agent.py  app.py  pyproject.toml  rag.py
chroma_db/96d90045-106c-4407-b2e7-fd0f6f073aa9/: index_metadata.pickle
